[package]
name = "sp-sandbox"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Helper crate partially taken from old substrate versions."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false }

[dev-dependencies]
assert_matches = "1.3.0"
wat = "1.0"

[features]
default = ["std"]
std = [
	"codec/std",
]
strict = []
wasmer-sandbox = []
